test/tests/operators/xsv/error_csv_null_value_conflicts_with_default_list_separator.txt
error: `list_separator` and `null_value` conflict
  ⋮
6 |   read_csv null_value=";"
  |                       ^^^ 
  |
  = note: `;` is a substring of `;`
